src/objects/TeacherLicense__c.object
<CustomObject>
    <description>Contains the data about teacher licenses and state-specific requirements to license as a teacher.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a license profile changes, we will de-activate it and change the Version change date to reflect the state’s policy change.  We will retain the deactivated licenses as a historical record of previous requirements, and the change date field will be used to indicate the date of the policy change, if known, or the date of de-activation.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableForDTApp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Since only students in initial licensure programs will do demonstration teaching, not all of the licenses on this list should be made available in the DT application.  The ones that should be in the DT application (Initial programs) are marked true and the licenses that Endorsement programs lead to are marked false.</description>
        <label>Available For DT App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicenseStateCode__c</fullName>
        <description>The name of the license, starting with the state abbreviation and followed by the name(s) of the licenses in the profile.</description>
        <label>License State Code</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UtahLicenseTitleLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utah License Title</label>
        <referenceTo>TeacherLicense__c</referenceTo>
        <relationshipLabel>Teacher Licenses</relationshipLabel>
        <relationshipName>Teacher_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UtahLicenseTitle__c</fullName>
        <description>If the license is Utah Reciprocity = true, then this is the name of the Utah license required for reciprocity licensure.</description>
        <label>Utah License Title Archive</label>
        <picklist>
            <picklistValues>
                <fullName>UT Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Early Childhood K-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Elementary Education K-6 or 1-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Elementary Mathematics K-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT English as a Second Language K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Level 2 (Middle Grades) Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Level 4 (Secondary) Mathematics 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Biology 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Chemistry 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Earth Science 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Physics 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Social Studies Composite 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT SPED Mild/Moderate K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT SPED Mild/Moderate K-12 and Elementary 1-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Elementary Education 1-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Middle School Math 6-12 (Level 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Integrated Science 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Math 6-12 (Level 4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Social Science 6-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Special Educ Mild/Moderate K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT Secondary Physical Science 6-12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UtahReciprocity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicating whether Utah license is required.</description>
        <label>Utah Reciprocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VersionChangeDate__c</fullName>
        <description>Date when the version was last revised.</description>
        <label>Version Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version number of the Teacher License.</description>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>Version 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Version 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Teacher License</label>
    <listViews>
        <fullName>AllLicenses</fullName>
        <columns>NAME</columns>
        <columns>LicenseStateCode__c</columns>
        <columns>UtahLicenseTitle__c</columns>
        <columns>UtahReciprocity__c</columns>
        <columns>Active__c</columns>
        <columns>AvailableForDTApp__c</columns>
        <columns>Version__c</columns>
        <columns>VersionChangeDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Licenses</label>
        <sharedTo>
            <group>FieldExperiences</group>
            <group>TeacherLicensure</group>
            <roleAndSubordinatesInternal>TeacherLicensureAgent</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Teacher License Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teacher Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UTLicenseTitleRequiredIfRecopricityTrue</fullName>
        <active>true</active>
        <description>If Utah Reciprocity Checkbox is selected, require the user to select a value for the Utah License Title lookup field.</description>
        <errorConditionFormula>AND(UtahReciprocity__c=TRUE,ISBLANK( TEXT(UtahLicenseTitle__c )))</errorConditionFormula>
        <errorDisplayField>UtahLicenseTitleLookup__c</errorDisplayField>
        <errorMessage>A Utah License Title must be selected If Utah Reciprocity is checked.</errorMessage>
    </validationRules>
</CustomObject>